Ansi colour toggle option added Refactored the middleware so RequestContext and tracing are initiated at the same time. Added the tracer-bullet API.
